config js rollup and postcss

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dist/style.min.css">
     <title>Logic Program</title>
 </head>
 <body>
     <h1>Logic Program</h1>
+
+    <script src="dist/bundle.js"></script>
+    <script>
+        main();
+    </script>
 </body>
 </html>
